[package]

name = "planets_nu"
version = "0.0.1"
authors = ["Paul Hendry <paul@pshendry.com>"]

[lib]

name = "planets_nu"
path = "src/lib.rs"

[dependencies.flate2]
git = "https://github.com/alexcrichton/flate2-rs"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.url]
git = "https://github.com/servo/rust-url.git"
