[package]
name = "planets_nu"
version = "0.1.3"
authors = ["Paul Hendry <paul@pshendry.com>"]

[lib]
name = "planets_nu"
path = "src/lib.rs"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"

[dependencies.flate2]
git = "https://github.com/alexcrichton/flate2-rs"

[dependencies.url]
git = "https://github.com/servo/rust-url"
